@@ -1,5 +1,7 @@
 package pl.printo3d.onedcutter.cutter1d;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -41,11 +43,11 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
   protected void configure(HttpSecurity http) throws Exception {
 
     CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-    corsConfiguration.setAllowedOrigins(List.of("https://onedcutterfront.herokuapp.com"));
-    corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT","OPTIONS","PATCH", "DELETE"));
+    corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+    corsConfiguration.setAllowedOrigins(Arrays.asList("https://onedcutterfront.herokuapp.com"));
+    corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PUT","OPTIONS","PATCH", "DELETE"));
     corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setExposedHeaders(List.of("Authorization"));
+    corsConfiguration.setExposedHeaders(Arrays.asList("Authorization"));
 
 
     http.authorizeRequests().antMatchers("/login", "/img/**", "/css/**").permitAll()
